@@ -138,6 +138,7 @@ typedef enum nsd_rc nsd_rc_type;
 #define TYPE_TLSA	52	/* RFC 6698 */
 #define TYPE_CDS	59	/* RFC 7344 */
 #define TYPE_CDNSKEY	60	/* RFC 7344 */
+#define TYPE_CSYNC	62	/* RFC 7477 */
 
 #define TYPE_SPF        99      /* RFC 4408 */
 
